# healthcare_api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.dev_db.yml  docker-compose.tests_db.yml  docker-compose.yml  pyproject.toml
reverse_proxy/: Dockerfile  default.conf.template
src/app/: pyproject.toml
src/app/healthcare/: entrypoint.sh
src/app/healthcare/healthcare/: .dev.env  .tests.env  dev_settings.py  settings.py  tests_settings.py  urls.py
src/app/healthcare/healthcare/api/: apps.py  models.py  serializers.py  urls.py  views.py
src/app/healthcare/healthcare/api/migrations/: 0001_initial.py
src/app/healthcare/healthcare/api/utils/: types.py
src/app/healthcare/healthcare/tests/: __init__.py  test_models.py  test_serializers.py  test_setup.py  test_views.py
src/app/healthcare/healthcare/utils/: constants.py
